# robot-sim

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  robot=sim initial spec.md
src/robot_sim/: cli.py  constants.py  generators.py  job.py  runner.py  stats.py
src/robot_sim/gui/: main_window.py  models.py
src/robot_sim/renderer/: base.py  null_renderer.py  panda_renderer.py
src/robot_sim/sim/: attractor.py  hedgehog.py  litter.py  paths.py  people.py  physics.py  robot.py  safety.py  simulation.py  terrain.py  vegetation.py  world.py
tests/: conftest.py  test_attractor.py  test_entity_list_determinism.py  test_ga_generator.py
