[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot-sim"
version = "0.1.0"
description = "Autonomous robot litter-collection simulator"
requires-python = ">=3.11"
dependencies = [
    "panda3d>=1.10.14",
    "typer>=0.12",
    "opensimplex>=0.4",
    "numpy>=1.26",
    "PySide6>=6.5",
]

[project.scripts]
robot-sim = "robot_sim.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/robot_sim"]
